<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="loginViewModel"
            type="com.pretext.musicplayerhmi.viewmodel.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_main">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#11000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/user_name"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginEnd="10dp"
                android:autofillHints="Username"
                android:background="@drawable/bg_input"
                android:inputType="text"
                android:padding="5dp"
                android:text="@={loginViewModel.user.account}"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:typeface="sans"
                app:layout_constraintBottom_toBottomOf="@id/user_name_image"
                app:layout_constraintLeft_toRightOf="@id/user_name_image"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/user_name_image"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/user_password"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginEnd="10dp"
                android:autofillHints="Password"
                android:background="@drawable/bg_input"
                android:inputType="textPassword"
                android:padding="5dp"
                android:text="@={loginViewModel.user.password}"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:typeface="sans"
                app:layout_constraintBottom_toBottomOf="@id/user_password_image"
                app:layout_constraintLeft_toRightOf="@id/user_password_image"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/user_password_image"
                tools:ignore="LabelFor" />


            <ImageView
                android:id="@+id/user_name_image"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="10dp"
                android:contentDescription="@string/user_name"
                android:src="@drawable/user"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/user_name"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/user_password_image"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="10dp"
                android:contentDescription="@string/user_password"
                android:src="@drawable/password"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/user_password"
                app:layout_constraintTop_toBottomOf="@id/user_name_image" />

            <Button
                android:id="@+id/login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_login_btn"
                android:enabled="@{!loginViewModel.isLoading}"
                android:onClick="@{() -> loginViewModel.authenticateUser(loginViewModel.user.account, loginViewModel.user.password)}"
                android:text="@string/login_btn"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:typeface="sans"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/register"
                app:layout_constraintTop_toBottomOf="@id/user_password" />

            <Button
                android:id="@+id/register"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_login_btn"
                android:enabled="@{!loginViewModel.isLoading}"
                android:onClick="@{() -> loginViewModel.registerUser(loginViewModel.user.account, loginViewModel.user.password)}"
                android:text="@string/register_btn"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:typeface="sans"
                app:layout_constraintBottom_toBottomOf="@id/login"
                app:layout_constraintLeft_toRightOf="@id/login"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/login" />

            <Button
                android:id="@+id/login_as_tourist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_login_btn"
                android:enabled="@{!loginViewModel.isLoading}"
                android:text="@string/login_as_tourist"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:typeface="sans"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/login" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>